--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>LifeStyle Stores</title>
+		<title>Login to LifeStyle Stores</title>
 		<!-- link to Bootstrap minified css-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<!-- link to Jquery minified-->
@@ -20,7 +20,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">LifeStyle Stores</a>
+					<a href="index.html" class="navbar-brand">LifeStyle Stores</a>
 				</div>
 				<div class="collapse navbar-collapse" id="mynavBar">
 					<ul class="nav navbar-nav navbar-right">
@@ -30,14 +30,24 @@
 				</div>
 			</div>
 		</nav>
-		<div id="banner-image">
-			<div class="container">
-				<div id="banner_content">
-					<h1>We sell lifestyle</h1>
-					<p>Flat 40% OFF</p>
-					<a href="products.html">
-						<button class="btn btn-danger btn-lg active">Shop Now</button>
-					</a>
+		<div class="container panel-margin">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Login to make purchase</h3>
+				</div>
+				<div class="panel-body">
+					<form>
+						<div class="form-group">
+							<input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
+						</div>
+						<div class="form-group">
+							<input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+						</div>
+						<button type="submit" class="btn btn-primary">Login</button>
+					</form>
+				</div>
+				<div class="panel-footer">
+					Don't have an account?Click <a href="signup.html">here</a> to create one.
 				</div>
 			</div>
 		</div>
