--- a/logout.html
+++ b/logout.html
@@ -20,7 +20,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">LifeStyle Stores</a>
+					<a href="index.html" class="navbar-brand">LifeStyle Stores</a>
 				</div>
 				<div class="collapse navbar-collapse" id="mynavBar">
 					<ul class="nav navbar-nav navbar-right">
@@ -29,18 +29,12 @@
 					</ul>
 				</div>
 			</div>
-		</nav>
-		<div id="banner-image">
-			<div class="container">
-				<div id="banner_content">
-					<h1>We sell lifestyle</h1>
-					<p>Flat 40% OFF</p>
-					<a href="products.html">
-						<button class="btn btn-danger btn-lg active">Shop Now</button>
-					</a>
-				</div>
-			</div>
-		</div>
+        </nav>
+        <div class="container panel-margin">
+            <div class="alert alert-success">
+                You have successfully logged out. Click <a href="index.html">here</a> to go back to index page.
+            </div>
+        </div>
 		<footer>
 			<div class="container">
 				Copyright <span class="glyphicon glyphicon-copyright-mark"></span> LifeStyle Stores.
