--- a/settings.html
+++ b/settings.html
@@ -20,24 +20,35 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">LifeStyle Stores</a>
+					<a href="index.html" class="navbar-brand">LifeStyle Stores</a>
 				</div>
 				<div class="collapse navbar-collapse" id="mynavBar">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-						<li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> SignUp</a></li>
+						<li><a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+						<li><a href="#"><span class="glyphicon glyphicon-user"></span> Settings</a></li>
+						<li><a href="logout.html"><span class="glyphicon glyphicon-log-out"> Logout</span></a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-		<div id="banner-image">
-			<div class="container">
-				<div id="banner_content">
-					<h1>We sell lifestyle</h1>
-					<p>Flat 40% OFF</p>
-					<a href="products.html">
-						<button class="btn btn-danger btn-lg active">Shop Now</button>
-					</a>
+		<div class="container panel-margin">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h2 class="panel-title">Change Password</h2>
+				</div>
+				<div class="panel-body">
+					<form>
+						<div class="form-group">
+							<input type="password" class="form-control" name="name" placeholder="Old Password" required>
+						</div>
+						<div class="form-group">
+							<input type="password" class="form-control" name="email" placeholder="New Password" required>
+						</div>
+						<div class="form-group">
+							<input type="password" class="form-control" name="password" placeholder="Re-type New Password" required>
+						</div>
+						<button type="submit" class="btn btn-primary">Change</button>
+					</form>
 				</div>
 			</div>
 		</div>
