--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">LifeStyle Stores</a>
+					<a href="index.html" class="navbar-brand">LifeStyle Stores</a>
 				</div>
 				<div class="collapse navbar-collapse" id="mynavBar">
 					<ul class="nav navbar-nav navbar-right">
@@ -30,14 +30,36 @@
 				</div>
 			</div>
 		</nav>
-		<div id="banner-image">
-			<div class="container">
-				<div id="banner_content">
-					<h1>We sell lifestyle</h1>
-					<p>Flat 40% OFF</p>
-					<a href="products.html">
-						<button class="btn btn-danger btn-lg active">Shop Now</button>
-					</a>
+		<div class="container panel-margin">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h2 class="panel-title">SignUp</h2>
+				</div>
+				<div class="panel-body">
+					<form>
+						<div class="form-group">
+							<input type="text" class="form-control" name="name" placeholder="Name" required>
+						</div>
+						<div class="form-group">
+							<input type="email" class="form-control" name="email" placeholder="Email" required>
+						</div>
+						<div class="form-group">
+							<input type="password" class="form-control" name="password" placeholder="Password" required>
+						</div>
+						<div class="form-group">
+							<input type="number" class="form-control" name="contact" placeholder="Contact" required>
+						</div>
+						<div class="form-group">
+							<input type="text" class="form-control" name="city" placeholder="City" required>
+						</div>
+						<div class="form-group">
+							<input type="text" class="form-control" name="address" placeholder="Address" required>
+						</div>
+						<button type="submit" class="btn btn-primary">Submit</button>
+					</form>
+				</div>
+				<div class="panel-footer">
+					Already have an account?Click <a href="login.html">here</a> to login.
 				</div>
 			</div>
 		</div>
